# pyrdfj2

./: .buildinfo  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.rst  debug-logconf.yml  docker.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyrdfj2.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  pyrdfj2.doctree
.github/workflows/: build_pages.yml  pr_validation.yml
_sources/: index.rst.txt  modules.rst.txt  pyrdfj2.rst.txt
pyrdfj2/: __init__.py  __version__.py  exceptions.py  j2_functions.py  pyrdfj2.py  rdf_syntax_builder.py  sparqlbuilder.py  syntax_builder.py
tests/: const.py  test_j2_functions.py  test_rdf_syntax_builder.py  test_sparqlbuilder.py  test_syntax_builder.py  util4tests.py
