[tool.poetry]
name = "pyrdfj2"
version = "0.0.5"
description = "Python wrapper on jinja SPARQL templating"
authors = [ "Marc Portier <marc.portier@gmail.com>", 
            "João Santos <jotaflame@gmail.com>"]
readme = "README.rst"
packages = [{include = "pyrdfj2"}]
license = "MIT"

repository = "https://github.com/vliz-be-opsci/pyrdfj2"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
jinja2 = "*"
uritemplate = "*"
python-dateutil = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poetry = "*"
pre-commit = "*"
isort = "*"
black = "*"
flake8 = "*"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pyyaml = "*"
pytest = "*"
coverage = "*"
python-dotenv = "*"
pytest-cov = "*"

[tool.poetry.scripts]
pykg2tbl = "pyrdfj2.__main__:main"

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
